:boom: Update configuration and prepare for first 21.x.x release
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>